<resources>
    <string name="app_name">Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setup">Setup Now</string>
    <string name="starting_settings">Your Settings</string>
    <string name="init_city">Avenida Marginal 25</string>
    <string name="init_street">150 m from you</string>
    <string name="api_key">AIzaSyAbuHdF1hB_ddtCtgEZ7iE3cDqXk4zpVJU</string>
    <string name="location">location</string>
    <string name="googlemap">GoogleMap</string>
    <string name="weather">Weather</string>
    <string name="_7_day_forecast">7-DAY FORECAST</string>
    <string name="high">High</string>
    <string name="sunset_hour">5:54 рм</string>
    <string name="sunrise_6_18am">Sunrise: 6:18AM</string>
    <string name="sunset">SUNSET</string>
    <string name="feels_like">FEELS LIKE</string>
    <string name="wind_feel_like">Wind is making it feel cooler.</string>
    <string name="wind">WIND</string>
    <string name="wind_unit">km/h</string>
    <string name="humidity">HUMIDITY</string>
    <string name="visibility">VISIBILITY</string>
    <string name="visibility_des">It\'s perfectly clear right now.</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="issue_des">You can describe the current conditions at your location to help improve forecasts.</string>
    <string name="learn_more_about">Learn more about</string>
    <string name="weather_data"><u>weather data</u></string>
    <string name="and">and</string>
    <string name="map_data"><u>map data</u></string>
    <string name="weather_for">Weather for</string>
    <string name="search_for_a_city_or_airport">Search for a city or airport</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="edit_list">Edit List</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="document_changed">Weather changed</string>
    <string name="do_you_want_to_save_your_edits">Do you want to delete your edits?</string>
    <string name="ok">Ok</string>
    <string name="save">Delete</string>
    <string name="weather_desc">Get the weather forecast in a beautiful and powerful app.</string>
    <string name="search">Search</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="_2023_weather_com_all_rights_reserved">© 2023 weather.com. All rights reserved.</string>
    <string name="version_v1_00_1535">Version V1.00 (1535)</string>
    <string name="about">about</string>
    <string name="weather_settings">weather Options</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="kilometer">KiloMeter</string>
    <string name="mile">Mile</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="the_weather_app_needs_your_permission_to_send_you_notifications">The Weather app needs your permission to send you notifications.</string>
    <string name="con">Continue</string>
    <string name="not_now">Not Now</string>
    <string name="weather_can_send_you_notifications_for_rain_snow_and_certain_relevant_severe_weather_alerts">Weather can send you notifications for rain, snow, and certain relevant severe weather alerts.</string>
    <string name="if_you_enable_severe_weather_notifications_the_app_can_associate_the_countrv_or_region_of_these_notifications_with_your_location">If you enable severe weather notifications, The app can associate the country or region of these notifications with your location.</string>
    <string name="current_location">CURRENT LOCATION</string>
    <string name="your_serveve_time">YOUR SERVEVE TIME</string>
    <string name="warning_between_dates">Warning between dates</string>
    <string name="severe_weather">Severe Weather</string>
    <string name="next_hour_notify">Next-Hour notify</string>
    <string name="notifications_aren_t_supported_for_the_locations_in_your_list_learn_more">Notifications aren\'t supported for the locations in your list. <u>Learn more...</u></string>
    <string name="duration_time">Duration time</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="hour">2:30</string>
    <string name="duration_time_date">Saturday, March 11, 2023</string>
    <string name="other">other</string>


</resources>